refactor: migrate TeamController.java
